--- a/index.html
+++ b/index.html
@@ -1,24 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Encrypt/Decrypt</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>WAV to MP3 Converter</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h2>File Encrypt / Decrypt</h2>
+    <div class="app-container">
+        <header class="header">
+            <div class="logo-container">
+                <div class="logo-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M9 18V5l12-2v13"/>
+                        <circle cx="6" cy="18" r="3"/>
+                        <circle cx="18" cy="16" r="3"/>
+                    </svg>
+                </div>
+                <h1>WAV to MP3</h1>
+            </div>
+            <p class="tagline">Fast. Simple. Free.</p>
+        </header>
 
-<input type="file" id="fileInput"><br><br>
+        <main class="main-content">
+            <div class="upload-zone" id="uploadZone">
+                <div class="upload-content">
+                    <div class="upload-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                            <polyline points="17 8 12 3 7 8"/>
+                            <line x1="12" y1="3" x2="12" y2="15"/>
+                        </svg>
+                    </div>
+                    <p class="upload-text">Drop your WAV file here</p>
+                    <p class="upload-subtext">or tap to browse</p>
+                </div>
+                <div class="pulse-ring"></div>
+                <div class="pulse-ring delay"></div>
+                <input type="file" id="fileInput" accept=".wav,audio/wav" hidden>
+            </div>
 
-<button onclick="encrypt()">Encrypt (-1 shift)</button>
-<button onclick="decrypt()">Decrypt (+1 shift)</button>
+            <div class="file-info hidden" id="fileInfo">
+                <div class="file-card">
+                    <div class="file-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                            <polyline points="14 2 14 8 20 8"/>
+                            <path d="M12 18v-6"/>
+                            <path d="M9 15l3 3 3-3"/>
+                        </svg>
+                    </div>
+                    <div class="file-details">
+                        <p class="file-name" id="fileName">filename.wav</p>
+                        <p class="file-size" id="fileSize">0 MB</p>
+                    </div>
+                    <button class="remove-btn" id="removeBtn">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="18" y1="6" x2="6" y2="18"/>
+                            <line x1="6" y1="6" x2="18" y2="18"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
 
-<script src="app.js"></script>
+            <div class="waveform-container hidden" id="waveformContainer">
+                <canvas id="waveformCanvas"></canvas>
+            </div>
 
-<link rel="manifest" href="manifest.json">
-<script>
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("service-worker.js");
-  }
-</script>
+            <div class="progress-container hidden" id="progressContainer">
+                <div class="progress-info">
+                    <span id="progressText">Converting...</span>
+                    <span id="progressPercent">0%</span>
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="progressFill"></div>
+                    <div class="progress-glow"></div>
+                </div>
+            </div>
+
+            <button class="convert-btn hidden" id="convertBtn">
+                <span class="btn-text">Convert to MP3</span>
+                <div class="btn-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M5 12h14"/>
+                        <path d="M12 5l7 7-7 7"/>
+                    </svg>
+                </div>
+            </button>
+
+            <div class="success-container hidden" id="successContainer">
+                <div class="success-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+                        <polyline points="20 6 9 17 4 12"/>
+                    </svg>
+                </div>
+                <h2>Conversion Complete!</h2>
+                <div class="size-comparison">
+                    <div class="size-item">
+                        <span class="size-label">Original</span>
+                        <span class="size-value" id="originalSize">0 MB</span>
+                    </div>
+                    <div class="size-arrow">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M5 12h14"/>
+                            <path d="M12 5l7 7-7 7"/>
+                        </svg>
+                    </div>
+                    <div class="size-item">
+                        <span class="size-label">Converted</span>
+                        <span class="size-value highlight" id="convertedSize">0 MB</span>
+                    </div>
+                </div>
+                <button class="download-btn" id="downloadBtn">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                        <polyline points="7 10 12 15 17 10"/>
+                        <line x1="12" y1="15" x2="12" y2="3"/>
+                    </svg>
+                    <span>Download MP3</span>
+                </button>
+                <button class="new-file-btn" id="newFileBtn">Convert Another File</button>
+            </div>
+        </main>
+
+        <footer class="footer">
+            <p>100% browser-based conversion</p>
+            <p class="footer-sub">Your files never leave your device</p>
+        </footer>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lamejs/1.2.1/lame.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
